--- a/Web Pages/index.html
+++ b/Web Pages/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Export: VCD BFA Show 2019">
     <title>⌘Export</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
   </head>
   <body>
+
+    <header>
+      <div class="navigation">
+        <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="process.html">Process</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <p>main</p>
+    </main>
+
+    <footer>
+      <p>footer</p>
+    </footer>
+
+     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 
   </body>
 </html>
