--- a/Web Pages/bios.html
+++ b/Web Pages/bios.html
@@ -8,5 +8,26 @@
   </head>
   <body>
 
+
+
+  <div class="row">
+      <img class="column"src="images/IMG_2897.JPG">
+      <div class="column">
+          <div>
+            <h2>Student Name</h2>
+            <br>
+            <h3>Professional facts</h3>
+            <p>Fact:</p>
+            <p>Fact:</p>
+            <p>Fact:</p>
+            <br>
+            <h3>Personal facts</h3>
+            <p>Fact:</p>
+            <p>Fact:</p>
+            <p>Fact:</p>
+        </div>
+      </div>
+  </div>
+
   </body>
 </html>
