added grid for bios

--- a/Web Pages/index.html
+++ b/Web Pages/index.html
@@ -27,6 +27,155 @@
       <p>main</p>
     </main>
 
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+
+
+      </div>
+
     <footer>
       <p>footer</p>
     </footer>
