creating student grid on homepage

--- a/Web Pages/index.html
+++ b/Web Pages/index.html
@@ -24,37 +24,154 @@
     </header>
 
     <main>
-      <p>main</p>
+      <div class="grid-container">
+        <div class="student-grid">
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897.JPG" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+        </div>
+      </div>
     </main>
 
-<div class="index">
-    <div class="flex-grid">
 
-        <div class="container" class="col">
-          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
-          <div class="overlay">Student name</div>
-        </div>
-
-        <div class="container" class="col">
-          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
-          <div class="overlay">Student name</div>
-        </div>
-
-        <div class="container" class="col">
-          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
-          <div class="overlay">Student name</div>
-        </div>
-
-        <div class="container" class="col">
-          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
-          <div class="overlay">Student name</div>
-        </div>
-
-        <div class="container" class="col">
-          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
-          <div class="overlay">Student name</div>
-        </div>
-</div>
+<!--
 
 <div class="index">
     <div class="flex-grid">
@@ -172,9 +289,42 @@
         </div>
 </div>
 
+<div class="index">
+    <div class="flex-grid">
 
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
 
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
       </div>
+
+
+
+    </div>
+
+-->
+
+
 
     <footer>
       <p>footer</p>
