--- a/Web Pages/bios.html
+++ b/Web Pages/bios.html
@@ -5,29 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Export: VCD BFA Show 2019">
     <title>⌘Export</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
   </head>
   <body>
 
+    <header>
+      <div class="navigation">
+        <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="process.html">Process</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
+    <main>
+      <div class="bio-grid-container">
+        <div class="bio-grid">
 
-  <div class="row">
-      <img class="column"src="images/IMG_2897.JPG">
-      <div class="column">
-          <div>
-            <h2>Student Name</h2>
-            <br>
-            <h3>Professional facts</h3>
-            <p>Fact:</p>
-            <p>Fact:</p>
-            <p>Fact:</p>
-            <br>
-            <h3>Personal facts</h3>
-            <p>Fact:</p>
-            <p>Fact:</p>
-            <p>Fact:</p>
+          <div class="sidebyside">
+            <img src="images/IMG_2897.JPG" alt="student name">
+          </div>
+
+          <div class="sidebyside">
+            <h1>Professional Facts</h1>
+            <ul>
+              <li>Fact:</li>
+              <li>Fact:</li>
+              <li>Fact:</li>
+            </ul>
+            <h1>Personal Facts</h1>
+              <br>
+            <ul>
+              <li>Fact:</li>
+              <li>Fact:</li>
+              <li>Fact:</li>
+            </ul>
+
+          </div>
         </div>
       </div>
-  </div>
+    </main>
+
+    <footer>
+      <p>footer</p>
+    </footer>
+
+     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 
   </body>
 </html>
