included static logo since animated one isn't showing up

--- a/Web Pages/index.html
+++ b/Web Pages/index.html
@@ -12,7 +12,7 @@
 
     <header>
       <div class="navigation">
-        <!-- <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a> -->
+        <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a>
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
         <nav>
           <ul>
