initial animation for homepage header

--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
      var headerAnim = bodymovin.loadAnimation({
         container: document.getElementById('command'),
         renderer: 'svg',
-        loop: true,
+        loop: false,
         autoplay: true,
-        path: 'images/temp folder/command1sec.json'
+        path: 'images/logo anim/header anim.json'
       })
 
 
