--- a/bios.html
+++ b/bios.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Export: VCD BFA Show 2019">
-    <title>⌘Export</title>
+    <title>⌘Export | Bios</title>
 
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
   </head>
@@ -12,7 +12,10 @@
 
     <header>
       <div class="navigation">
+        <!-- Static logo
         <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a>
+        -->
+        <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -52,10 +55,36 @@
     </main>
 
     <footer>
-      <p>footer</p>
     </footer>
 
-     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+
+
+    <script src="images/logo anim/lottie.js"></script>
+
+    <script>
+    var logoAnim = bodymovin.loadAnimation({
+      container: document.getElementById('export-logo'),
+      renderer: 'svg',
+      loop: false,
+      autoplay: false,
+      path: 'images/logo anim/command 1s-10f.json'
+    })
+
+
+    btn = document.getElementById('command-hover');
+
+    btn.addEventListener('mouseenter',function(){
+      logoAnim.playSegments([0,40], true);
+      logoAnim.setSpeed(1);
+    })
+
+    btn.addEventListener('mouseleave',function(){
+      //logoAnim.setDirection(-1)
+      //logoAnim.setSpeed(1);
+    })
+
+    </script>
 
   </body>
 </html>
