--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="command-bg">
       <div class="grid-container">
         <div class="student-grid">
 
@@ -333,7 +333,7 @@
 
 
     <footer>
-      <p>footer</p>
+
     </footer>
 
 
