overhaul of index and updating all styles, grid fix and fixed/sticky command logo

--- a/about.html
+++ b/about.html
@@ -5,24 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Export: VCD BFA Show 2019">
     <title>⌘Export | About</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/fgm7wqm.css">
   </head>
   <body>
     <header>
       <div class="navigation">
-        <!-- Static logo
-        <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a>
-        -->
+        <a href="index.html"><img src="images/_logos/command e logo lockup.svg" alt="Export logo"></a>
+        <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
+        -->
         <nav>
-          <ul>
+          <ul class="location-bullets">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li id="current-page"><a href="about.html">About</a></li>
+            <li><a href="location.html">Location</a></li>
             <li><a href="process.html">Process</a></li>
           </ul>
         </nav>
-      </div>
-      <div class="bgAnim">
-        <i id="command"></i>
       </div>
     </header>
   </body>
