--- a/index (old backup).html
+++ b/index (old backup).html
@@ -11,21 +11,16 @@
   </head>
   <body>
 
-    <header id="top-of-page">
+    <header>
       <div class="navigation">
-        <a href="index.html#top-of-page"><img src="images/_logos/command only.svg" alt="Export logo" class="sticky-command"></a>
-        <a href="index.html"><img src="images/_logos/e only.svg" alt="Export logo"></a>
-        <!--Full logo
-        <a href="index.html"><img src="images/_logos/command e logo lockup.svg" alt="Export logo"></a>
+        <!-- Static logo
+        <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a>
         -->
-        <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
-        -->
         <nav>
-          <ul class="location-bullets">
-            <li id="current-page"><a href="index.html">Home</a></li>
+          <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="location.html">Location</a></li>
             <li><a href="process.html">Process</a></li>
           </ul>
         </nav>
@@ -183,6 +178,160 @@
     </main>
 
 
+<!--
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+</div>
+
+<div class="index">
+    <div class="flex-grid">
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+
+        <div class="container" class="col">
+          <a href=""><img class="indeximg" src="images/IMG_2897.JPG" alt="student name" class="image"></a>
+          <div class="overlay">Student name</div>
+        </div>
+      </div>
+
+
+
+    </div>
+
+-->
+
+
 
     <footer>
 
@@ -195,7 +344,6 @@
 
      <script src="images/logo anim/lottie.js"></script>
 
-<!--
      <script>
      var logoAnim = bodymovin.loadAnimation({
        container: document.getElementById('export-logo'),
@@ -229,7 +377,6 @@
 
 
      </script>
--->
 
 
   </body>
