--- a/bios.html
+++ b/bios.html
@@ -7,19 +7,21 @@
     <title>⌘Export | Bios</title>
 
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/fgm7wqm.css">
   </head>
   <body>
 
     <header>
       <div class="navigation">
-        <!-- Static logo
-        <a href="index.html"><img src="images/Export logo.svg" alt="Export logo"></a>
-        -->
+        <a href="index.html"><img src="images/_logos/command e logo lockup.svg" alt="Export logo"></a>
+        <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
+        -->
         <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
+          <ul class="location-bullets">
+            <li id="current-page"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="location.html">Location</a></li>
             <li><a href="process.html">Process</a></li>
           </ul>
         </nav>
