--- a/location.html
+++ b/location.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Export: VCD BFA Show 2019">
-    <title>⌘Export | Process</title>
+    <title>⌘Export | Location</title>
 
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fgm7wqm.css">
@@ -20,8 +20,8 @@
           <ul class="location-bullets">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="location.html">Location</a></li>
-            <li id="current-page"><a href="process.html">Process</a></li>
+            <li id="current-page"><a href="location.html">Location</a></li>
+            <li><a href="process.html">Process</a></li>
           </ul>
         </nav>
       </div>
