fix image linking

--- a/bios.html
+++ b/bios.html
@@ -13,7 +13,7 @@
 
     <header>
       <div class="navigation">
-        <a href="index.html"><img src="images/_logos/command e logo lockup.svg" alt="Export logo"></a>
+        <a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a>
         <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
         -->
