--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <header id="top-of-page">
       <div class="navigation">
-        <a href="index.html#top-of-page"><img src="images/_logos/command only.svg" alt="Export logo" class="sticky-command"></a>
-        <a href="index.html"><img src="images/_logos/e only.svg" alt="Export logo"></a>
+        <a href="index.html#top-of-page"><img src="images/logos/command only.svg" alt="Export logo" class="sticky-command"></a>
+        <a href="index.html"><img src="images/logos/e only.svg" alt="Export logo"></a>
         <!--Full logo
-        <a href="index.html"><img src="images/_logos/command e logo lockup.svg" alt="Export logo"></a>
+        <a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a>
         -->
         <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
