--- a/process.html
+++ b/process.html
@@ -11,16 +11,13 @@
   </head>
   <body>
     <header>
-      <div class="navigation">
-        <a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a>
-        <!-- Animated old logo
-        <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
-        -->
+      <div class="navigation-top">
         <nav>
-          <ul class="location-bullets">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="location.html">Location</a></li>
+          <ul class="menu">
+            <li id="not-current-page"><a href="index.html">Home</a></li>
+            <li id="not-current-page"><a href="about.html">About</a></li>
+            <li><a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a></li>
+            <li id="not-current-page"><a href="location.html">Location</a></li>
             <li id="current-page"><a href="process.html">Process</a></li>
           </ul>
         </nav>
