--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
         -->
-        <nav>
+        <!--<nav>
           <ul class="menu">
             <li id="current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
@@ -36,7 +36,30 @@
       <div class="bgAnim">
         <i id="command"></i>
       </div>
-    </header>
+    </header>-->
+
+
+    <nav>
+      <ul class="menu">
+        <li id="current-page"><a href="index.html">Home</a></li>
+        <li id="not-current-page"><a href="about.html">About</a></li>
+        <li><a href="index.html">
+            <picture>
+              <source srcset="images/logos/command e logo lockup.svg"
+                      media="(min-width: 500px)">
+              <img src="images/logos/command only.svg"/>
+            </picture>
+        </a></li>
+        <li id="not-current-page"><a href="location.html">Location</a></li>
+        <li id="not-current-page"><a href="process.html">Process</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="bgAnim">
+    <i id="command"></i>
+  </div>
+</header>
+
 
     <main class="command-bg">
       <div class="grid-container">
