fixed nav issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <header id="top-of-page">
+    <header id="top-of-page" class="large-screen-menu">
       <div class="navigation-top">
         <!--left corner sticky command only logo
         <a href="index.html#top-of-page"><img src="images/logos/command only.svg" alt="Export logo" class="sticky-command"></a>
@@ -23,7 +23,7 @@
         <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
         -->
-        <!--<nav>
+        <nav class="large-screen-menu">
           <ul class="menu">
             <li id="current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
@@ -36,29 +36,36 @@
       <div class="bgAnim">
         <i id="command"></i>
       </div>
-    </header>-->
+    </header>
+
+    <header id="top-of-page" class="small-screen-menu">
+      <div class="navigation-top">
+        <!--left corner sticky command only logo
+        <a href="index.html#top-of-page"><img src="images/logos/command only.svg" alt="Export logo" class="sticky-command"></a>
+        <a href="index.html"><img src="images/logos/e only.svg" alt="Export logo"></a>
+        -->
+        <!--Full logo
+        <a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a>
+        -->
+        <!-- Animated old logo
+        <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
+        -->
+        <nav>
+          <ul class="menu">
+            <li id="current-page"><a href="index.html">Home</a></li>
+            <li id="not-current-page"><a href="about.html">About</a></li>
+            <li><a href="index.html"><img src="images/logos/command only.svg" alt="Export logo"></a></li>
+            <li id="not-current-page"><a href="location.html">Location</a></li>
+            <li id="not-current-page"><a href="process.html">Process</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="bgAnim">
+        <i id="command"></i>
+      </div>
+    </header>
 
 
-    <nav>
-      <ul class="menu">
-        <li id="current-page"><a href="index.html">Home</a></li>
-        <li id="not-current-page"><a href="about.html">About</a></li>
-        <li><a href="index.html">
-            <picture>
-              <source srcset="images/logos/command e logo lockup.svg"
-                      media="(min-width: 500px)">
-              <img src="images/logos/command only.svg"/>
-            </picture>
-        </a></li>
-        <li id="not-current-page"><a href="location.html">Location</a></li>
-        <li id="not-current-page"><a href="process.html">Process</a></li>
-      </ul>
-    </nav>
-  </div>
-  <div class="bgAnim">
-    <i id="command"></i>
-  </div>
-</header>
 
 
     <main class="command-bg">
