--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
 
+<!-- Small Screen Header-->
+
     <header id="top-of-page" class="large-screen-menu">
       <div class="navigation-top">
         <!--left corner sticky command only logo
@@ -38,6 +40,8 @@
       </div>
     </header>
 
+<!-- Small Screen Header-->
+
     <header id="top-of-page" class="small-screen-menu">
       <div class="navigation-top">
         <!--left corner sticky command only logo
@@ -64,7 +68,6 @@
         <i id="command"></i>
       </div>
     </header>
-
 
 
 
